2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (PKL_TRANS_PUSH_UNESCAPABLE): Define.
	(pkl_trans1_pr_type_struct): Push unescapable context.
	(pkl_trans1_ps_type_struct): Pop uescapable context.
	(pkl_transl_pr_type_struct): Push unescapable context.
	(pkl_transl_ps_type_struct): Pop uescapable context.
	(pkl_trans1_pr_type_array): Push unescapable context.
	(pkl_trans1_ps_type_array): Pop uescapable context.
	(pkl_transl_pr_type_array): Push unescapable context.
	(pkl_transl_ps_type_array): Pop uescapable context.
	(pkl_trans1_pr_func): Push unescapable context.
	(pkl_trans1_ps_func): Pop uescapable context.
	(pkl_transl_pr_func): Push and pop unescapable context.
	(PKL_TRANS_MAX_COMP_STMT_NEST): Bump to 120.
	* testsuite/poke.pkl/break-diag-2.pk: New test.
	* testsuite/poke.pkl/break-diag-3.pk: Likewise.
	* testsuite/poke.pkl/break-diag-4.pk: Likewise.
	* testsuite/poke.pkl/break-diag-5.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>

	* MAINTAINERS: New file.
	* Makefile.am (EXTRA_DIST): Add MAINTAINERS.
	* doc/pokeint.texi: New file.
	* doc/Makefile.am (info_TEXINFOS): Add pokeint.texi.
	(INFO_DEPS): Add $(srcdir)/pokeint.info.
	* etc/hacking.org: Move some content to doc/pokeint.texi.

2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_phase_transf): New struct.
	(pkl_phase_transf_ps_comp_stmt): New handler.
	* libpoke/pkl-passes.def: Add phase transf to the second pass.

2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_pr_comp_stmt): Do not handle
	escapable nframes.
	(pkl_trans1_ps_break_continue_stmt): Likewise.
	(pkl_trans1_pr_try_stmt_handler): Remove handler.
	(pkl_trans1_ps_try_stmt_handler): Likewise.
	(pkl_transl_pr_loop_stmt): Handle escapable nframes.
	(pkl_transl_pr_loop_stmt): Likewise.
	(pkl_transl_pr_comp_stmt): Liekwise
	(pkl_transl_ps_comp_stmt): Likewise.