@@ -1502,6 +1502,8 @@ PKL_PHASE_BEGIN_HANDLER (pkl_trans1_pr_try_stmt_body)
 {
   if (PKL_TRANS_FUNCTION)
     PKL_TRANS_FUNCTION->npopes++;
+  if (PKL_TRANS_ESCAPABLE)
+    PKL_TRANS_ESCAPABLE->npopes++;
 
   if (PKL_AST_TRY_STMT_KIND (PKL_PASS_PARENT) == PKL_AST_TRY_STMT_KIND_UNTIL)
     PKL_TRANS_PUSH_ESCAPABLE (PKL_PASS_PARENT);
@@ -1519,6 +1521,8 @@ PKL_PHASE_BEGIN_HANDLER (pkl_trans1_ps_try_stmt_body)
 {
   if (PKL_TRANS_FUNCTION)
     PKL_TRANS_FUNCTION->npopes--;
+  if (PKL_TRANS_ESCAPABLE)
+    PKL_TRANS_ESCAPABLE->npopes--;
 
   if (PKL_AST_TRY_STMT_KIND (PKL_PASS_PARENT) == PKL_AST_TRY_STMT_KIND_UNTIL)
     PKL_TRANS_POP_ESCAPABLE;
