@@ -1104,6 +1104,7 @@ EXTRA_DIST = \
   poke.pkl/break-while-3.pk \
   poke.pkl/break-while-4.pk \
   poke.pkl/break-while-5.pk \
+  poke.pkl/break-while-6.pk \
   poke.pkl/builtins-1.pk \
   poke.pkl/cast-any-to-function-diag-1.pk \
   poke.pkl/cast-array-1.pk \
