@@ -1,3 +1,11 @@
+2024-06-07  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-trans.c (pkl_trans1_pr_try_stmt_body): Increase
+	npopes in escapable.
+	(pkl_trans1_ps_try_stmt_body): Decrease npopes in escapable.
+	* testsuite/poke.pkl/break-while-6.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-trans.c (PKL_TRANS_PUSH_UNESCAPABLE): Define.
